// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Idin methods Identify 1`] = `
[
  {
    "channel": "Web",
    "data": {
      "Currency": "EUR",
      "PushURL": "https://example.com/push",
      "ReturnURL": "https://example.com/return",
      "Services": {
        "ServiceList": [
          {
            "Action": "Identify",
            "Name": "idin",
            "Parameters": [
              {
                "Name": "IssuerID",
                "Value": "BANKNL2Y",
              },
            ],
            "Version": 0,
          },
        ],
      },
      "ServicesSelectableByClient": "",
    },
    "method": "POST",
    "path": "/json/DataRequest",
  },
]
`;

exports[`Idin methods Login 1`] = `
[
  {
    "channel": "Web",
    "data": {
      "Currency": "EUR",
      "PushURL": "https://example.com/push",
      "ReturnURL": "https://example.com/return",
      "Services": {
        "ServiceList": [
          {
            "Action": "Login",
            "Name": "idin",
            "Parameters": [
              {
                "Name": "IssuerID",
                "Value": "BANKNL2Y",
              },
            ],
            "Version": 0,
          },
        ],
      },
      "ServicesSelectableByClient": "",
    },
    "method": "POST",
    "path": "/json/DataRequest",
  },
]
`;

exports[`Idin methods Verify 1`] = `
[
  {
    "channel": "Web",
    "data": {
      "Currency": "EUR",
      "PushURL": "https://example.com/push",
      "ReturnURL": "https://example.com/return",
      "Services": {
        "ServiceList": [
          {
            "Action": "Verify",
            "Name": "idin",
            "Parameters": [
              {
                "Name": "IssuerID",
                "Value": "BANKNL2Y",
              },
            ],
            "Version": 0,
          },
        ],
      },
      "ServicesSelectableByClient": "",
    },
    "method": "POST",
    "path": "/json/DataRequest",
  },
]
`;
